--- a/index.html
+++ b/index.html
@@ -9,15 +9,47 @@
 </head>
 <body>
 
-    <div class="container mt-4">
+    <div class="container mt-4 mb-5">
         <header class="text-center mb-4">
             <h1>Gerador de Escalas de Fim de Semana</h1>
-            <p class="lead">Defina o mês, ano e os freelancers (opcional) para gerar a escala.</p>
+            <p class="lead">Preencha os nomes, defina o mês e gere a escala.</p>
         </header>
 
         <div class="card shadow-sm mb-4">
+            <div class="card-header">
+                <h5 class="mb-0">1. Funcionários (Baseado na última semana de Setembro de 2025)</h5>
+            </div>
             <div class="card-body">
-                <h5 class="card-title">Controles</h5>
+                <p class="card-text">Preencha os nomes dos funcionários de acordo com o grupo de folga da escala base.</p>
+                <div class="row">
+                    <div class="col-md-4 mb-3 mb-md-0">
+                        <h6>Grupo que folgou na Sexta (26/09)</h6>
+                        <input type="text" class="form-control mb-2" id="grupoA-func1" placeholder="Funcionario 1" value="Maicon">
+                        <input type="text" class="form-control mb-2" id="grupoA-func2" placeholder="Funcionario 2" value="Iranilda">
+                        <input type="text" class="form-control mb-2" id="grupoA-func3" placeholder="Funcionario 3" value="Valeria">
+                    </div>
+                    <div class="col-md-4 mb-3 mb-md-0">
+                        <h6>Grupo que folgou no Sábado (27/09)</h6>
+                        <input type="text" class="form-control mb-2" id="grupoB-func1" placeholder="Funcionario 1" value="Elida">
+                        <input type="text" class="form-control mb-2" id="grupoB-func2" placeholder="Funcionario 2" value="Ingred">
+                        <input type="text" class="form-control mb-2" id="grupoB-func3" placeholder="Funcionario 3" value="Daiane">
+                    </div>
+                    <div class="col-md-4">
+                        <h6>Grupo que folgou no Domingo (28/09)</h6>
+                        <input type="text" class="form-control mb-2" id="grupoC-func1" placeholder="Funcionario 1" value="Stefany">
+                        <input type="text" class="form-control mb-2" id="grupoC-func2" placeholder="Funcionario 2" value="Ana Flavia">
+                        <input type="text" class="form-control mb-2" id="grupoC-func3" placeholder="Funcionario 3" value="Luciana">
+                        <input type="text" class="form-control mb-2" id="grupoC-func4" placeholder="Funcionario 4" value="Isadora">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card shadow-sm mb-4">
+             <div class="card-header">
+                <h5 class="mb-0">2. Gerar Escala</h5>
+            </div>
+            <div class="card-body">
                 <div class="row g-3 align-items-end">
                     <div class="col-md-3">
                         <label for="mes" class="form-label">Mês</label>
@@ -28,24 +60,24 @@
                         <input type="number" class="form-control" id="ano" value="2025">
                     </div>
                     <div class="col-md-3">
-                        <label for="freelancer1" class="form-label">Nome Freelancer 1 (Opcional)</label>
-                        <input type="text" class="form-control" id="freelancer1" placeholder="Ex: Carlos">
+                        <label for="freelancer1" class="form-label">Freelancer 1 (Opcional)</label>
+                        <input type="text" class="form-control" id="freelancer1" placeholder="Nome">
                     </div>
                     <div class="col-md-3">
-                        <label for="freelancer2" class="form-label">Nome Freelancer 2 (Opcional)</label>
-                        <input type="text" class="form-control" id="freelancer2" placeholder="Ex: Bia">
+                        <label for="freelancer2" class="form-label">Freelancer 2 (Opcional)</label>
+                        <input type="text" class="form-control" id="freelancer2" placeholder="Nome">
                     </div>
                 </div>
-                 <div class="d-flex justify-content-end mt-3">
+                 <div class="d-flex justify-content-end mt-3 gap-2">
+                    <button class="btn btn-secondary" id="reset-btn">Resetar Estado</button>
                     <button class="btn btn-primary" id="gerar-escala-btn">Gerar Escala</button>
-                    </div>
+                </div>
             </div>
         </div>
 
         <hr>
 
-        <div id="calendario-container">
-            </div>
+        <div id="calendario-container"></div>
 
     </div>
 
