--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gerador de Escalas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 </head>
 <body>
     <div class="container mt-4 mb-5">
@@ -17,7 +18,7 @@
         <div class="card shadow-sm mb-4">
             <div class="card-header"><h5 class="mb-0">1. Funcionários</h5></div>
             <div class="card-body">
-                <p class="card-text">Preencha os nomes dos funcionários de cada grupo. A ordem das folgas é salva e carregada automaticamente.</p>
+                <p class="card-text">Preencha os nomes dos funcionários de cada grupo. A ordem das folgas é salva e carregada automatically.</p>
                 <div class="row">
                     <div class="col-md-4 mb-3 mb-md-0">
                         <h6>Grupo A</h6>
@@ -25,6 +26,7 @@
                         <input type="text" class="form-control mb-2 mt-2" id="grupoA-func1" placeholder="Funcionario 1" value="Maicon">
                         <input type="text" class="form-control mb-2" id="grupoA-func2" placeholder="Funcionario 2" value="Iranilda">
                         <input type="text" class="form-control mb-2" id="grupoA-func3" placeholder="Funcionario 3" value="Valeria">
+                        <input type="text" class="form-control mb-2" id="grupoA-func4" placeholder="Vazio">
                     </div>
                     <div class="col-md-4 mb-3 mb-md-0">
                         <h6>Grupo B</h6>
@@ -32,6 +34,7 @@
                         <input type="text" class="form-control mb-2 mt-2" id="grupoB-func1" placeholder="Funcionario 1" value="Elida">
                         <input type="text" class="form-control mb-2" id="grupoB-func2" placeholder="Funcionario 2" value="Ingred">
                         <input type="text" class="form-control mb-2" id="grupoB-func3" placeholder="Funcionario 3" value="Daiane">
+                        <input type="text" class="form-control mb-2" id="grupoB-func4" placeholder="Vazio">
                     </div>
                     <div class="col-md-4">
                         <h6>Grupo C</h6>
@@ -55,6 +58,7 @@
                     <div class="col-md-3"><label for="freelancer2" class="form-label">Freelancer 2 (Opc.)</label><input type="text" class="form-control" id="freelancer2" placeholder="Nome"></div>
                 </div>
                  <div class="d-flex justify-content-end mt-3 gap-2">
+                    <button class="btn btn-success" id="export-excel-btn" disabled>Exportar para Excel (.xlsx)</button>
                     <button class="btn btn-danger" id="reset-btn">Resetar Ordem</button>
                     <button class="btn btn-primary" id="gerar-escala-btn">Gerar Escala</button>
                 </div>
@@ -67,11 +71,11 @@
             <div class="card-header"><h5 class="mb-0">Como Usar</h5></div>
             <div class="card-body">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><b>1. Verifique os Nomes:</b> Apenas na primeira vez (ou após um "Reset"), confira se os nomes nos grupos A, B e C estão corretos.</li>
+                    <li class="list-group-item"><b>1. Verifique os Nomes:</b> Confira se os nomes nos grupos A, B e C estão corretos. Você pode adicionar até 4 pessoas por grupo.</li>
                     <li class="list-group-item"><b>2. Geração Contínua:</b> Escolha o mês/ano e clique em "Gerar Escala". O sistema usará a ordem de folgas do mês anterior para calcular a nova escala.</li>
-                    <li class="list-group-item"><b>3. Memória Automática:</b> O sistema salva a última ordem de folgas no seu navegador. Ao fechar e abrir a página, ele continuará de onde parou.</li>
-                    <li class="list-group-item"><b>4. Textos de Ajuda:</b> Abaixo do nome de cada grupo, um texto informa em qual dia da semana aquele grupo folgou por último, para sua referência.</li>
-                    <li class="list-group-item"><b>5. Resetar Ordem:</b> Se precisar recomeçar a contagem da estaca zero (Setembro de 2025), clique em "Resetar Ordem". Isso não apaga os nomes que você digitou, apenas a ordem das folgas.</li>
+                    <li class="list-group-item"><b>3. Exportação:</b> Após gerar a escala, o botão "Exportar para Excel" será habilitado. Clique nele para baixar a planilha.</li>
+                    <li class="list-group-item"><b>4. Memória Automática:</b> O sistema salva a última ordem de folgas no seu navegador. Ao fechar e abrir a página, ele continuará de onde parou.</li>
+                    <li class="list-group-item"><b>5. Resetar Ordem:</b> Se precisar recomeçar a contagem da estaca zero (Setembro de 2025), clique em "Resetar Ordem".</li>
                 </ul>
             </div>
         </div>
